--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
 .ccls-cache
-CMakeFiles
-_deps
-cmake
-CMakeCache.txt
-CPackConfig.cmake
-CPackSourceConfig.cmake
-Makefile
-chess
-cmake_install.cmake
-compile_commands.json
+bin
+build
